--- a/index.html
+++ b/index.html
@@ -1,2 +1,28 @@
+<!DOCTYPE html>
+<html>
 
-<p>Hola mundo</p>
+<head>
+</head>
+    <body>
+	
+	    <h2 style= "color:#b366ff">Karla Fernanda Esquivel Sotelo</h2>
+		
+	    <h1 style= "color:#e600e6">Propuesta de eje integrador</h1>
+		
+		
+		<p> Mi proyecto de eje integrador consistira en presentar un cortometraje enfocado a la suplantación de identidad en las aplicaciones de citas, que se presentara en una pagína web de creacion propia, con la cual se pueda interactuar.</p>
+		
+		<p>La pagina web esta pensada para ser un medio de contencion del producto final, asi como un medio en el cual se pueda interactiar con vinculos. Ademas que es un medio facil de acceder y compartir el producto final.</p>
+		
+		<p> Se eligio ese tema debido al uso masivo del internet, debido a esto las personas son muy vulnerables a pasar por una suplantación de identidad lo cual es un foco de riesgo para los usuarios. 
+		Problematizaremos este tema investigando casos de suplantacion de identidad los cuales trataremos de vilcular para crear un solo caso o historia, como si fuera una historia vivida desde tres puntos de vista tratando que la misma tenga una perspectiva de el usuario que roba las identidades, la victima, asi como tambien aquellos que son estafados o son "victimas secundarias".</p>
+		
+		<p> El formato del proyecto "cortometraje" fue elegido debido a que nos da mayor libertad creativa.</p>
+		
+		<p> Va dirigido a todo el publico debido a que cualquiera puede pasar por una suplantacion de identidad pero principalmente a los jovenes o aquellos mayores de edad.</p>
+		
+		<img src="imagen/foto.png">
+		
+	    </body>
+     </html>
+	 <body bgcolor= "#e6fffa">
